# dealflowAI

./: .env.example  ARCHITECTURE.md  README.md  pyproject.toml  run_example.py
src/merger_arb/: __init__.py  config.py  main.py
src/merger_arb/agents/: __init__.py  equity_research.py
src/merger_arb/prompts/: equity_research.py
src/merger_arb/tools/: __init__.py  edgar.py  web_search.py
